src/objects/Customer_Owned_Unit__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Customer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Account.Is_Customer__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Owned Units</relationshipLabel>
        <relationshipName>Customer_Owned_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountingId__c</fullName>
        <label>AccountingId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
    	<fullName>Category_Name__c</fullName>
	    <formula>Category__r.Name</formula>
	    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
	    <label>Category Name</label>
	    <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountingResponse__c</fullName>
        <label>AccountingResponse</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
	<fields>
        <fullName>Purchase_Tax_Credit__c</fullName>
        <description>amount the purchase tax on ordered unit</description>
        <label>Purchase Tax Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accounting_Id_Category__c</fullName>
        <label>Accounting Id - Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Last_Sync_Time_Category__c</fullName>
        <label>Accounting Last Sync Time - Category</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Accounting_Last_Sync_Time_Consignment__c</fullName>
        <label>Accounting Last Sync Time Consignment</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Accounting_Last_Sync_Time_NITC_JE__c</fullName>
        <label>Accounting Last Sync Time NITC JE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Accounting_Last_Sync_Time_Unit_JE__c</fullName>
        <label>Accounting Last Sync Time Unit JE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Generic_Unit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Generic Unit</label>
        <type>Checkbox</type>
    </fields>
	<fields>
        <fullName>Is_Accrue_Purchase_Tax_Until_Unit_Sold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Accrue Purchase Tax Until Unit Sold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accounting_Response_Category__c</fullName>
        <label>Accounting Response - Category</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Accounting_Response_Consignment__c</fullName>
        <label>Accounting Response Consignment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Accounting_Response_NITC_JE__c</fullName>
        <label>Accounting Response NITC JE</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Accounting_Response_Unit_Invoice_JE__c</fullName>
        <label>Accounting Response Unit Invoice JE</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <formula>NOT(ISPICKVAL(Status__c , &apos;Inactive&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>Number of days between “Date Stocked In” and either the Current System Date or the “Date Stocked Out” whichever is older</description>
        <formula>IF(ISPICKVAL(Unit_Type__c, &apos;ORDU&apos;) ,  IF( ISPICKVAL( Status__c, &apos;Received&apos;) , 0, Date_Expected__c - TODAY()) , IF( Date_Stocked_Out__c &lt; TODAY(), Date_Stocked_Out__c - Date_Stocked_In__c, TODAY() -Date_Stocked_In__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Compliance_Date__c</fullName>
        <label>Compliance Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Of_1st_Rego__c</fullName>
        <label>Year Of 1st Rego</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Serial__c</fullName>
        <label>Registration Serial</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roof_Type__c</fullName>
        <label>Roof Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreed_Payout__c</fullName>
        <label>Agreed Payout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicable_Tax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales tax to apply on unit</description>
        <label>Applicable Tax</label>
        <referenceTo>Sales_Tax__c</referenceTo>
        <relationshipLabel>Customer Owned Units</relationshipLabel>
        <relationshipName>Customer_Owned_Units</relationshipName>
        <type>Lookup</type>
    </fields>
	<fields>
        <fullName>Unit_Purchase_Tax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Purchase Tax</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Tax type should be Purchase</errorMessage>
            <filterItems>
                <field>Sales_Tax__c.Tax_Type__c</field>
                <operation>equals</operation>
                <value>Purchase</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Sales_Tax__c</referenceTo>
        <relationshipLabel>Customer Owned Units (Unit Purchase Tax)</relationshipLabel>
        <relationshipName>Ordered_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Tag_1__c</fullName>
        <label>Assigned Tag 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Tag_2__c</fullName>
        <label>Assigned Tag 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automatic__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is unit automatic or not</description>
        <label>Automatic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Avail_For_QB_Sync_Category__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Avail For QB Sync - Category</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_For_QB_Unit_Invoice_JE_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For QB Unit Invoice JE Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_For_Xero_Consignment_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Xero Consignment Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_For_DP360_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For DP360 Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_For_QB_Consignment_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For QB Consignment Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_For_QB_NITC_JE_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For QB NITC JE Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_For_Xero_JE_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Xero JE Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_For_Xero_NITC_JE_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Xero NITC JE Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_For_Xero_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Xero Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_For_Xero_Unit_Invoice_JE_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Xero Unit Invoice JE Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Axle_Quantity__c</fullName>
        <label>Axle Quantity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Axle_Type__c</fullName>
        <label>Axle Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Battery__c</fullName>
        <label>Battery</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beavertail__c</fullName>
        <label>Beavertail</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Style__c</fullName>
        <label>Body Style</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brakes__c</fullName>
        <label>Brakes</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chassis__c</fullName>
        <label>Chassis#</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coupler_Height__c</fullName>
        <label>Coupler Height</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coupler_Size__c</fullName>
        <label>Coupler Size</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Curb_Weight__c</fullName>
        <label>Curb Weight</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Category assigned to the unit</description>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Customer Owned Units</relationshipLabel>
        <relationshipName>Customer_Owned_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Colour__c</fullName>
        <description>Exterior Colour of unit</description>
        <label>Exterior Colour</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate</label>
        <type>Date</type>
    </fields>
	<fields>
		<fullName>Credit_Note_Number__c</fullName>
		<inlineHelpText>Used to store consignment credit note number</inlineHelpText>
		<label>Credit Note Number</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cylinders__c</fullName>
        <description>Number of cylinders in unit</description>
        <label>Cylinders</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DP360_Inventory_Id__c</fullName>
        <label>DP360 Inventory Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Expected__c</fullName>
        <description>Date the unit was expected to be delivered</description>
        <label>Date Expected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Ordered__c</fullName>
        <description>Date the unit was ordered</description>
        <label>Date Ordered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Stocked_In__c</fullName>
        <description>Date the unit was stocked into inventory</description>
        <label>Date Stocked In</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Stocked_Out__c</fullName>
        <description>Date the unit was removed from inventory</description>
        <label>Date Stocked Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Options_WIP__c</fullName>
        <label>Deal Options WIP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description_Long__c</fullName>
        <label>Description Long</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_Short__c</fullName>
        <label>Description Short</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Drivetrain__c</fullName>
        <label>Drivetrain</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Type__c</fullName>
        <label>Engine Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feed_Category__c</fullName>
        <label>Feed Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feed_SubCategory__c</fullName>
        <label>Feed SubCategory</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fenders__c</fullName>
        <label>Fenders</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor_Decking__c</fullName>
        <label>Floor Decking</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frame__c</fullName>
        <label>Frame</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Front_Door_Size__c</fullName>
        <label>Front Door Size</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Front_Door_Type__c</fullName>
        <label>Front Door Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fuel_Type__c</fullName>
        <label>Fuel Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAWR__c</fullName>
        <label>GAWR</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GVWR__c</fullName>
        <label>GVWR</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gate__c</fullName>
        <label>Gate</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Height_Deck__c</fullName>
        <label>Height Deck</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Height_Interior__c</fullName>
        <label>Height Idnterior</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hydraulics__c</fullName>
        <label>Hydraulics</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Displacement__c</fullName>
        <description>Displacement of unit</description>
        <label>Displacement</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engine_Serial_No__c</fullName>
        <description>Engine Serial Number of unit</description>
        <label>Engine Serial No</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Factory_Order_No__c</fullName>
        <description>Factory order number of unit</description>
        <label>Factory Order No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formatted_Name__c</fullName>
        <formula>IF( Is_Generic_Unit__c , &apos;Service job without a unit&apos;, IF( NOT(ISBLANK(Unit_Make__c)), Unit_Make__r.Name, &apos;&apos;) &amp; 
IF( NOT(ISBLANK(Unit_Model__c)), &apos; &apos; &amp; Unit_Model__r.Name__c, &apos;&apos;) &amp; 
IF( NOT(ISBLANK(Sub_Model__r.Sub_Model_Name__c)), &apos; &apos; &amp; Sub_Model__r.Sub_Model_Name__c, &apos;&apos;) &amp; 
IF( NOT(ISNULL(Year__c)), &apos; &apos; &amp; TEXT(Year__c), &apos;&apos;) &amp; 
IF( NOT(ISBLANK(Colour__c)), &apos;, &apos; &amp; Colour__c, &apos;&apos;))</formula>
        <label>Formatted Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gears__c</fullName>
        <description>Number of Gears in unit</description>
        <label>Gears</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interior_Colour__c</fullName>
        <description>Interior Colour of unit</description>
        <label>Interior Colour</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Ordered_Unit_Added_To_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Ordered Unit Added To Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jack__c</fullName>
        <label>Jack</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_No__c</fullName>
        <description>Key number of unit</description>
        <label>Key No</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <formula>DATEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Owned_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Length_Interior__c</fullName>
        <label>Length Interior</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_Overall__c</fullName>
        <label>Length Overall</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lights__c</fullName>
        <label>Lights</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location of the unit</description>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make_Name__c</fullName>
        <formula>Unit_Make__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Make Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufactured_Date__c</fullName>
        <description>Manufactured date of this unit</description>
        <label>Manufactured Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Max_COU_Count__c</fullName>
        <label>Max COU Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Stock_Count__c</fullName>
        <description>This will store the maximum count for Unit Present</description>
        <label>Max Stock Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mileage_Type__c</fullName>
        <description>Mileage types for unit</description>
        <label>Mileage Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Km</fullName>
                </value>
                <value>
                    <fullName>Mi</fullName>
                </value>
                <value>
                    <fullName>Hrs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mileage_Value__c</fullName>
        <description>Mileage of unit</description>
        <label>Mileage Value</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <description>This mileage is not in use as we have created new field(Mileage Value).</description>
        <label>Mileage</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model_Detail__c</fullName>
        <formula>Model_Name__c &amp; &apos; &apos; &amp; Sub_Model__r.Sub_Model_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Name__c</fullName>
        <formula>Unit_Model__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NITC_Amount__c</fullName>
        <formula>IF(ISPICKVAL(Unit_Type__c , &quot;STOCK&quot;), 
IF(ISNULL(Sales_Tax_Credit__c) , 
Purchase_Tax_Credit__c , 
Sales_Tax_Credit__c * -1), 
null)</formula>
        <label>NITC Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NITC_Claimed_Manually__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NITC Claimed Manually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NITC_Date_Claimed__c</fullName>
        <label>NITC Date Claimed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NITC_Withheld__c</fullName>
        <formula>IF( 
OR(
NOT(ISPICKVAL(Unit_Type__c , &quot;STOCK&quot;)),
AND(
NOT(ISPICKVAL(Status__c , &quot;Available&quot;)),
NOT(ISPICKVAL(Status__c , &quot;Reserved&quot;))
) ,
ISNULL(NITC_Amount__c),
NITC_Claimed_Manually__c
) , 
0, 
NITC_Amount__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NITC Withheld</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Unit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if unit is new</description>
        <label>New Unit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nose_Type__c</fullName>
        <label>Nose Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>General unit notes</description>
        <label>Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ORDU_Stock_Id__c</fullName>
        <label>ORDU Stock Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Customer Owned Units (Old Category)</relationshipLabel>
        <relationshipName>Customer_Owned_Units1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Serial_No__c</fullName>
        <description>Other serial number of unit</description>
        <label>Other Serial No</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overridden_Total_Cost_With_Tax__c</fullName>
        <description>It holds value of total cost overridden by the user while receving unit order for tax include pricing on org.</description>
        <label>Overridden Total Cost With Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payload_Capacity__c</fullName>
        <label>Payload Capacity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_Type__c</fullName>
        <label>Power Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product type</label>
        <referenceTo>Unit_Product_Type__c</referenceTo>
        <relationshipLabel>Customer Owned Units</relationshipLabel>
        <relationshipName>Customer_Owned_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pull_Out__c</fullName>
        <label>Pull Out</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pull_Type__c</fullName>
        <label>Pull Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publish_in_feeds__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Publish in feeds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plate__c</fullName>
        <description>Plate/Reg number of unit</description>
        <label>Plate/Reg No</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_Accounting_Id_Unit_Invoice_JE__c</fullName>
        <label>QB Accounting Id Unit Invoice JE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_Consignment_Accounting_Id__c</fullName>
        <label>QB Consignment Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
   <fields>
        <fullName>QB_NITC_JE_Accounting_Id__c</fullName>
        <label>QB NITC JE Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ramps__c</fullName>
        <label>Ramps</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rear_Door_Size__c</fullName>
        <label>Rear Door Size</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rear_Door_Type__c</fullName>
        <label>Rear Door Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referenced_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referenced Unit</label>
        <referenceTo>Customer_Owned_Unit__c</referenceTo>
        <relationshipLabel>Customer Owned Units</relationshipLabel>
        <relationshipName>Customer_Owned_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reg_Expiry_Date__c</fullName>
        <description>Records the registration expiry date of a customer owned unit</description>
        <inlineHelpText>Records the registration expiry date of a customer owned unit</inlineHelpText>
        <label>Reg Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Credit__c</fullName>
        <description>amount the sales tax was reduced on the deal because of the trade</description>
        <label>Sales Tax Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Search_Priority__c</fullName>
        <formula>IF(ISPICKVAL(Status__c, &apos;Available&apos;), 1, 
    IF(ISPICKVAL(Status__c, &apos;Reserved&apos;), 2, 
    IF(ISPICKVAL(Status__c, &apos;Sold&apos;), 3, 
    IF(ISPICKVAL(Status__c, &apos;Active&apos;), 4, 
    IF(ISPICKVAL(Status__c, &apos;Transferred&apos;), 5, 
    IF(ISPICKVAL(Status__c, &apos;On Order&apos;), 6, 
    IF(ISPICKVAL(Status__c, &apos;Temporary&apos;), 7, 
    IF(ISPICKVAL(Status__c, &apos;Received&apos;), 8, 
    IF(ISPICKVAL(Status__c, &apos;Cancelled&apos;), 9, 
    10)))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Search Priority</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Search_Tag__c</fullName>
        <description>Search Tag</description>
        <label>Search Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seat_Color__c</fullName>
        <label>Seat Color</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seating_Capacity__c</fullName>
        <label>Seating/capacity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Side_Door_Size__c</fullName>
        <label>Side Door Size</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Side_Door_Type__c</fullName>
        <label>Side Door Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sidewall_Liner__c</fullName>
        <label>Sidewall Liner</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Steering__c</fullName>
        <label>Steering</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of unit based on unit type</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Unit_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                </value>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Reserved</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>Traded</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>On Order</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Temporary</fullName>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StockId__c</fullName>
        <description>This will contain the stock id</description>
        <label>StockId</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Stock_Id__c</fullName>
        <description>This will contain the stock id</description>
        <label>Stock Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Stocked_In_DateTime__c</fullName>
        <label>Stocked In DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sub_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Model</label>
        <referenceTo>Unit_Sub_Model__c</referenceTo>
        <relationshipLabel>Customer Owned Units</relationshipLabel>
        <relationshipName>Customer_Owned_Units</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>